--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ button{
 h1{
     font-family: Poppins, sans-serif;
     font-size: 30px;
-    margin-left: 8px;
     line-height: 45px;
 }
 
@@ -105,7 +104,44 @@ ul{
     margin-top: 70px;
     justify-content: center; 
     align-items: center;
+    padding: 10px;
+    margin: 7%;
+    text-align: center;
 }
+
+#section-2{
+    display: flex;
+    height: 1131px;
+    background-color: #F9F9F9;
+    flex-direction: column;
+    border-bottom: 1px solid #69B99D;
+}
+
+#info-2{
+    display: flex;
+    width: 85%;
+    height: 650px;
+    padding: 10px;
+    margin: 7%;
+    flex-direction: column;
+}
+
+h1{
+    font-family: Poppins, sans-serif;
+    font-size: 30px;
+    line-height: 45px;
+}
+
+#img-2{
+    display: flex;
+    height: 17.5rem;
+    width: 100%;
+    margin-top: 6.3rem;
+    object-fit: cover;
+}
+
+
+
 
 
 
