--- a/style.css
+++ b/style.css
@@ -331,5 +331,46 @@
         margin-left:7%;
     }
 
+    #footer{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 300px;
+        background-color: #69B99D;
+    }
+
+    #informacoes-footer{
+        flex-direction: column;
+        height: 130px;
+        display: flex;
+        width: 85%;
+        padding: 10px;
+        margin: 7%;
+        margin-top: 3rem;
+    }
+
+    #span-white{
+        color: #F9F9F9;
+        font-size: 25px;
+    }
+
+    #h1-footer{
+        font-size: 25px;
+    }
+
+    #p-footer{
+        color: #F9F9F9;
+        font-size: 15px;
+    }
+
+    #icones-footer{
+        height: 130px;
+        display: flex;
+        width: 85%;
+        padding: 10px;
+        margin: 7%;
+        gap: 2rem;
+    }
+
     
     
