--- a/style.css
+++ b/style.css
@@ -171,12 +171,15 @@
     }
     
     #section-3{
-        flex-direction: column;
+        flex-wrap: wrap;
         display: flex;
         background-color: #F9F9F9;
         width: 100%;
         height: 1553px;
         border-bottom: 1px solid #69B99D;
+        
+        justify-content: center;
+        gap: 1.875rem;
     }
     
     #info-3{
@@ -184,7 +187,7 @@
         width: 85%;
         height: 180px;
         padding: 10px;
-        margin: 7%;
+        
         flex-direction: column;
     }
     
@@ -192,15 +195,16 @@
         background-color: #F9F9F9;
         display: flex;
         width: 85%;
+        max-width: 20rem;
         height: 372px;
-        padding: 10px;
-        margin: 7%;
+        padding: 1px;      
         flex-direction: column;
         align-items: center;
-        text-align: center;
-        gap: 10px;
+        text-align: center;  
+        gap: 1rem;      
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         border-bottom: 3px solid #69B99D;
+        
     }
     
     #img-3{
@@ -213,15 +217,16 @@
         background-color: #F9F9F9;
         display: flex;
         width: 85%;
+        max-width: 20rem;
         height: 372px;
-        padding: 10px;
-        margin: 7%;
+        padding: 10px;      
         flex-direction: column;
         align-items: center;
-        text-align: center;
-        gap: 10px;
+        text-align: center;     
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         border-bottom: 3px solid #69B99D;
+        gap: 1rem; 
+        
     }
     
     #img-4{
@@ -234,22 +239,22 @@
         background-color: #F9F9F9;
         display: flex;
         width: 85%;
+        max-width: 20rem;
         height: 372px;
         padding: 10px;
-        margin: 7%;
         flex-direction: column;
         align-items: center;
-        text-align: center;
-        gap: 10px;
+        text-align: center;    
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         border-bottom: 3px solid #69B99D;
+        gap: 1rem; 
+        margin-bottom: 50px;
     }
     
     #img-5{
         height: 80px;
         width: 80px;
         margin-top: 20%;
-
     }
     
     #section-4{
