--- a/style.css
+++ b/style.css
@@ -280,7 +280,8 @@
         display: flex;
         width: 85%;
         padding: 10px;
-        margin: 7%;
+        margin-left: 7%;
+        margin-top: 5%;
     }
     #button-2{
         display: flex;
@@ -342,7 +343,7 @@
         display: flex;
         width: 85%;
         padding: 10px;
-        margin: 7%;
+        margin-left: 7%;
         margin-top: 3rem;
     }
 
@@ -362,10 +363,10 @@
 
     #icones-footer{
         height: 130px;
-        display: flex;
-        width: 85%;
-        padding: 10px;
-        margin: 7%;
+        display: flex;   
+        width: 1rem;
+        margin-left: 8%;
+        margin-bottom: 1.575rem;
         gap: 2rem;
     }
 
