--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
         background-color: black
     }
     
-    button{
+    #button-1{
         font-family: DM sans, sans-serif;
         color: #F9F9F9;
         background-color: #69B99D;
@@ -50,8 +50,12 @@
     }
 
     li{
+        
         list-style: none;
-        font-family: DM sans, sans-serif;
+        font-family: Poppins, sans-serif;
+        font-size: 21px;
+        font-weight: 700;  
+        
     }
 
     a{
@@ -67,6 +71,60 @@
         align-items: center;
         border-bottom: 1px solid rgb(207, 207, 207);
         width: 100%;
+    }
+
+    .icons-menu.on{
+        position: absolute;
+        background-color: white;
+        width: 100vw;
+        height: 100vh;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
+
+    #icons-menu{
+        position: absolute;
+        height: 100px;
+        width: 100px;
+        right: 5%;
+        top: 2%;
+    }
+
+    #button-hamburguer{
+        cursor: pointer;
+    }
+    
+    #hamburguer.on{
+        display: none;
+    }
+
+    #hamburguer{
+        position: absolute;
+        right: 5%;
+        top: 4%;
+    }
+
+    #close.on{
+        position: absolute;
+        left: 5%;
+        top: 4%;
+    }
+
+    #close{
+        display: none;
+    }
+
+    #lista.on{
+        display: flex;
+        justify-content: center;
+        margin-top: 15rem;
+        text-align: center;   
+    }
+
+    #lista{
+        display: none;
     }
     
     #section-1{
