--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@
         width: 85%;
         height: 180px;
         padding: 10px;
-        
+        margin-top: 5%;
         flex-direction: column;
     }
     
@@ -264,7 +264,7 @@
         align-items: center;
         text-align: center;  
         gap: 1rem;      
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
         border-bottom: 3px solid #69B99D;
         
     }
@@ -285,7 +285,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;     
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
         border-bottom: 3px solid #69B99D;
         gap: 1rem; 
         
@@ -307,7 +307,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;    
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
         border-bottom: 3px solid #69B99D;
         gap: 1rem; 
         margin-bottom: 50px;
