--- a/style.css
+++ b/style.css
@@ -580,7 +580,7 @@
         #back-img-1{
             height: 20rem;
             top:0;
-            width: 38rem;
+            width: 80%;
         }
 
         #imgs-1{
