--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@
         display: flex;
         background-color: #F9F9F9;
         width: 100%;
-        height: 1553px;
+        height: auto;
         border-bottom: 1px solid #69B99D;  
         justify-content: center;
         gap: 1.875rem;
