--- a/style.css
+++ b/style.css
@@ -88,17 +88,12 @@
     .button-image:hover{
         background-color: transparent;
     }
-
-    #button-hamburguer{
-        cursor: pointer;
-    }
     
     .icons-menu.on #hamburguer{
         display: none;
     }
 
-    #hamburguer{
-        
+    #hamburguer{      
         position: absolute;
         right: 5%;
         top: 4%;
@@ -123,6 +118,7 @@
 
     .icons-menu.on #lista{
         display: flex;
+        flex-direction: column;
         margin-top: 15rem;
         text-align: center; 
         justify-content: center;
@@ -559,6 +555,9 @@
         }
     }
 
+    @media (min-width:800px){
+   
+
     @media (min-width: 1000px){
         #section-1{
             flex-direction: row-reverse;
@@ -615,6 +614,21 @@
         #section-2{
             height: 570px;
         }
+
+        #section-4{
+            flex-direction: initial;
+        }
+
+        #info-4{
+            width: 20rem;
+            margin-left: 10%;
+        }
+
+        .swiper{
+            margin-left: 10%;
+            max-height: 25rem;
+        }
+
     }
 
 
