--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
 
     li{
         
-        list-style: none;
+        list-style: none !important;
         font-family: Poppins, sans-serif;
         font-size: 21px;
         font-weight: 700;  
@@ -116,15 +116,17 @@
         display: none;
     }
 
-    .icons-menu.on #lista{
-        display: flex;
-        flex-direction: column;
-        margin-top: 15rem;
+    .icons-menu.on ul{
+        display: flex;   
+        flex-direction: column; 
         text-align: center; 
         justify-content: center;
+        align-items: center;
+        gap: 1.875rem;
+        margin-top: 12rem;
     }
 
-    #lista{
+    ul{
         display: none;
     }
 
@@ -556,6 +558,9 @@
     }
 
     @media (min-width:800px){
+
+        
+    }
    
 
     @media (min-width: 1000px){
