--- a/style.css
+++ b/style.css
@@ -673,6 +673,13 @@
 
     }
 
+    @media only screen and (min-device-width: 320px) and (max-device-width: 568px) 
+    and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 40/71){
+        #contatos{
+            margin-top: 2.5rem;
+        }
+}
+
 
     
     
